--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
       privacyLink: "Privacy",
       kpiT: "Example",
       kpiS: "Shows gross income before taxes.",
+      kpiPattern: "{sym} {rate} / hr × {hrs} h / week",
       faqMiniT: "Quick note",
       faqMini: "Monthly salary here is calculated as yearly / 12 for simplicity.",
       seo: `
@@ -358,6 +359,7 @@
       privacyLink: "Политика",
       kpiT: "Пример",
       kpiS: "Показан доход до налогов.",
+      kpiPattern: "{sym} {rate} / час × {hrs} ч / нед",
       faqMiniT: "Важно",
       faqMini: "Доход за месяц считается как доход за год / 12 — для простоты.",
       seo: `
@@ -428,9 +430,12 @@
       msg.textContent = t.msgInvalid;
     }
 
-    // If results already shown, re-render them with current currency formatting (no recompute needed)
+    // Re-render example & results if already calculated
     if (document.getElementById('results').style.display !== 'none') {
       renderLast();
+    } else {
+      // even if results not shown, keep example language consistent
+      renderExampleOnly();
     }
   }
 
@@ -439,10 +444,8 @@
   }
 
   function money(n, symbol){
-    // simple readable formatting
     if (!isFinite(n)) return "—";
     const fixed = n.toFixed(2);
-    // add spaces for thousands
     const parts = fixed.split('.');
     parts[0] = parts[0].replace(/\B(?=(\d{3})+(?!\d))/g, ' ');
     return `${symbol}${parts[0]}.${parts[1]}`;
@@ -462,6 +465,38 @@
     msg.style.display = 'none';
     msg.dataset.kind = '';
     msg.textContent = '';
+  }
+
+  function sanitizeCurrencyInput() {
+    const el = document.getElementById('currency');
+    if (!el) return;
+
+    let v = (el.value || '').trim();
+    // remove digits, dots, commas, spaces
+    v = v.replace(/[0-9.,\s]/g, '');
+    if (!v) v = '$';
+    v = v.slice(0, 3);
+    el.value = v;
+
+    // keep UI consistent
+    if (typeof renderLast === 'function') renderLast();
+  }
+
+  document.addEventListener('input', (e) => {
+    if (e.target && e.target.id === 'currency') sanitizeCurrencyInput();
+  });
+
+  function renderExampleOnly(){
+    const symbolRaw = (document.getElementById('currency').value || '$').trim();
+    const symbol = symbolRaw.length ? symbolRaw : '$';
+    const hourly = document.getElementById('hourly').value || "20";
+    const hours = document.getElementById('hours').value || "40";
+
+    const pattern = text[lang].kpiPattern || "{sym} {rate} / hr × {hrs} h / week";
+    document.getElementById('kpiV').textContent = pattern
+      .replace("{sym}", symbol)
+      .replace("{rate}", hourly)
+      .replace("{hrs}", hours);
   }
 
   function calculate(){
@@ -487,18 +522,27 @@
   }
 
   function renderLast(){
-    if (!last) return;
+    // Always sanitize currency (prevents $30 bug)
+    sanitizeCurrencyInput();
+
     const symbolRaw = (document.getElementById('currency').value || '$').trim();
     const symbol = symbolRaw.length ? symbolRaw : '$';
 
-    document.getElementById('vWeekly').textContent = money(last.weekly, symbol);
-    document.getElementById('vMonthly').textContent = money(last.monthly, symbol);
-    document.getElementById('vYearly').textContent = money(last.yearly, symbol);
+    // Update results if available
+    if (last) {
+      document.getElementById('vWeekly').textContent = money(last.weekly, symbol);
+      document.getElementById('vMonthly').textContent = money(last.monthly, symbol);
+      document.getElementById('vYearly').textContent = money(last.yearly, symbol);
+    }
 
-    // update example line
+    // Update example line (localized)
     const hourly = document.getElementById('hourly').value || "20";
     const hours = document.getElementById('hours').value || "40";
-    document.getElementById('kpiV').textContent = `${symbol}${hourly}/hr × ${hours}h/week`;
+    const pattern = text[lang].kpiPattern || "{sym} {rate} / hr × {hrs} h / week";
+    document.getElementById('kpiV').textContent = pattern
+      .replace("{sym}", symbol)
+      .replace("{rate}", hourly)
+      .replace("{hrs}", hours);
   }
 
   function resetAll(){
@@ -509,10 +553,24 @@
     document.getElementById('currency').value = '$';
     document.getElementById('results').style.display = 'none';
     last = null;
+    sanitizeCurrencyInput();
+    renderExampleOnly();
   }
 
   // init
+  sanitizeCurrencyInput();
   setLang('en');
+
+  // keep example updating while typing hourly/hours (nice UX)
+  document.addEventListener('input', (e) => {
+    if (!e.target) return;
+    if (['hourly','hours'].includes(e.target.id)) {
+      // if results shown, re-render fully; otherwise only example
+      if (document.getElementById('results').style.display !== 'none') renderLast();
+      else renderExampleOnly();
+    }
+  });
 </script>
+
 </body>
 </html>
