--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,84 @@
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Privacy Policy</title>
+<meta name="description" content="Privacy Policy for Salary Tools calculator."/>
+
+<style>
+/* === SAME STYLE AS MAIN SITE === */
+:root{
+  --bg0:#070A12;--bg1:#0A1022;--card:rgba(255,255,255,.06);
+  --stroke:rgba(255,255,255,.12);--text:rgba(255,255,255,.92);
+  --muted:rgba(255,255,255,.62);--shadow:0 18px 55px rgba(0,0,0,.45);
+  --r22:22px
+}
+body{
+  margin:0;font-family:system-ui,Segoe UI,Roboto,Arial;
+  color:var(--text);
+  background:linear-gradient(180deg,var(--bg0),var(--bg1))
+}
+.wrap{max-width:900px;margin:0 auto;padding:24px}
+.card{
+  background:var(--card);
+  border:1px solid var(--stroke);
+  border-radius:var(--r22);
+  box-shadow:var(--shadow);
+  padding:20px
+}
+.seg button{cursor:pointer}
+</style>
+</head>
+
+<body>
+<div class="wrap">
+
+<div class="seg">
+<button onclick="setLang('en')">EN</button>
+<button onclick="setLang('ru')">RU</button>
+</div>
+
+<div class="card">
+<h1 id="title"></h1>
+<div id="content"></div>
+</div>
+
+</div>
+
+<script>
+let lang='en';
+const text={
+en:{
+title:"Privacy Policy",
+content:`
+<p>This website does not collect, store, or share personal data.</p>
+<p>All calculations are performed locally in your browser.</p>
+<p>We do not require registration or login.</p>
+<p>Third-party services such as Google AdSense may use cookies to display relevant ads.</p>
+<p>By using this website, you agree to this Privacy Policy.</p>
+`
+},
+ru:{
+title:"Политика конфиденциальности",
+content:`
+<p>Этот сайт не собирает, не хранит и не передаёт персональные данные.</p>
+<p>Все расчёты выполняются локально в вашем браузере.</p>
+<p>Регистрация и вход не требуются.</p>
+<p>Сторонние сервисы (например Google AdSense) могут использовать cookie для показа рекламы.</p>
+<p>Используя сайт, вы соглашаетесь с данной политикой.</p>
+`
+}
+};
+
+function setLang(l){
+lang=l;
+document.getElementById('title').textContent=text[l].title;
+document.getElementById('content').innerHTML=text[l].content;
+}
+setLang('en');
+</script>
+
+</body>
+</html>
 
