--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,30 @@
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Terms of Service</title>
+
+<style>
+body{margin:0;font-family:system-ui;background:#070A12;color:#fff}
+.wrap{max-width:900px;margin:auto;padding:24px}
+.card{background:#111;border-radius:18px;padding:20px}
+</style>
+</head>
+
+<body>
+<div class="wrap">
+<div class="card">
+<h1>Terms of Service</h1>
+
+<p>This website provides salary calculation tools for informational purposes only.</p>
+<p>Results are estimates and may not reflect actual earnings.</p>
+<p>We are not responsible for decisions made based on this information.</p>
+<p>Use of this site is at your own risk.</p>
+
+<p>By using this website, you agree to these terms.</p>
+</div>
+</div>
+</body>
+</html>
 
