--- a/about.html
+++ b/about.html
@@ -1,1 +1,29 @@
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>About</title>
+
+<style>
+body{margin:0;font-family:system-ui;background:#070A12;color:#fff}
+.wrap{max-width:900px;margin:auto;padding:24px}
+.card{background:#111;border-radius:18px;padding:20px}
+</style>
+</head>
+
+<body>
+<div class="wrap">
+<div class="card">
+<h1>About Salary Tools</h1>
+
+<p>Salary Tools is a simple online calculator designed to help users convert hourly wages into weekly, monthly, and yearly income.</p>
+
+<p>The project focuses on clarity, speed, and privacy.</p>
+
+<p>No registration. No tracking. Just useful tools.</p>
+</div>
+</div>
+</body>
+</html>
 
