--- a/index.html
+++ b/index.html
@@ -253,7 +253,9 @@
 
         <footer>
           <div>© <span id="year"></span> Salary Tools • <span id="footNote">Estimates only</span></div>
-          <div><a href="#" id="privacyLink" onclick="alert(privacyText[lang]); return false;">Privacy</a></div>
+          <div><a href="about.html" id="privacyLink" onclick="alert(privacyText[lang]);">About</a></div>
+          <div><a href="privacy.html" id="privacyLink" onclick="alert(privacyText[lang]);">Privacy</a></div>
+          <div><a href="terms.html" id="privacyLink" onclick="alert(privacyText[lang]);">Terms</a></div>
         </footer>
       </div>
 
