--- a/index.html
+++ b/index.html
@@ -253,7 +253,10 @@
 
         <footer>
           <div>© <span id="year"></span> Salary Tools • <span id="footNote">Estimates only</span></div>
-          <div><a href="privacy.html" id="privacyLink" onclick="alert(privacyText[lang]);">Privacy</a></div>
+          <div> <a href="about.html">About</a> ·
+                <a href="privacy.html">Privacy</a> ·
+                <a href="terms.html">Terms</a>
+        </div>
         </footer>
       </div>
 
