--- a/index.html
+++ b/index.html
@@ -254,8 +254,7 @@
         <footer>
           <div>© <span id="year"></span> Salary Tools • <span id="footNote">Estimates only</span></div>
           <div><a href="privacy.html" id="privacyLink"></a></div>
-          <div> <a href="about.html">About</a> ·
-                <a href="privacy.html">Privacy</a> ·
+          <div> <a href="about.html">About</a>
                 <a href="terms.html">Terms</a>
         </div>
         </footer>
