--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Hourly to Salary Calculator</title>
   <meta name="description" content="Convert hourly wage to weekly, monthly and yearly salary. Hourly to salary calculator with RU/EN languages."/>
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6528076410139599"
+     crossorigin="anonymous"></script>
+
   <style>
     :root{
       --bg0:#070A12;
