--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <title>Hourly to Salary Calculator</title>
   <meta name="description" content="Convert hourly wage to weekly, monthly and yearly salary. Hourly to salary calculator with RU/EN languages."/>
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-25RBMQWB19"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-25RBMQWB19');
+</script>
+
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6528076410139599"
      crossorigin="anonymous"></script>
 
